--- a/lounge.css
+++ b/lounge.css
@@ -12,8 +12,16 @@
   background-repeat: no-repeat;
   background-position: top left;
 }
-.elixirs{
-  border-width: 3px;
-  border-style: groove;
+#elixirs{
+  border-width: thin;
+  border-style: solid;
   border-color: darkgreen;
+  width: 200px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  margin-left: 209x;
+  text-align: center;
+  background-image: url(images/cocktail.gif);
+  background-repeat: repeat-x;
 }
